--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -211,19 +211,13 @@
     "    def has_scene_flow(self):\n",
     "        return (self.uvdviz_im1 is not None and self.uvdviz_im2 is not None and self.K is not None)\n",
     "    \n",
-    "    def get_xyz1(self):\n",
-    "        uvd1 = self.uvdviz_im1[self.uvdviz_im1[:, -1] == 1, :3]\n",
-    "        xyzrgb1 = uvd_to_xyzrgb(uvd1, self.K)\n",
-    "        return xyzrgb1\n",
-    "    \n",
-    "    def get_xyz2(self):\n",
-    "        uvd2 = self.uvdviz_im2[self.uvdviz_im2[:, -1] == 1, :3]\n",
-    "        xyzrgb2 = uvd_to_xyzrgb(uvd2, self.K)\n",
-    "        return xyzrgb2\n",
-    "    \n",
     "    def get_sf_viz_html(self):\n",
-    "        uvd1 = self.uvdviz_im1[self.uvdviz_im1[:, -1] == 1, :3]\n",
-    "        uvd2 = self.uvdviz_im2[self.uvdviz_im2[:, -1] == 1, :3]\n",
+    "        uvd1 = self.uvdviz_im1[:, :3]\n",
+    "        uvd2 = self.uvdviz_im2[:, :3]\n",
+    "#         visible_either = ((uvd1[:, -1] == 1) | (uvd2[:, -1] == 1))\n",
+    "#         uvd1 = uvd1[visible_either, :3]\n",
+    "#         uvd2 = uvd2[visible_either, :3]\n",
+    "        \n",
     "        xyzrgb1 = uvd_to_xyzrgb(uvd1, self.K, imgs=[self.get_img1()])\n",
     "        xyzrgb2 = uvd_to_xyzrgb(uvd2, self.K, imgs=[self.get_img2()])\n",
     "        html1 = create_xyzrgb_3d_plot_html(xyzrgb1)\n",
@@ -782,6 +776,12 @@
     "    \n",
     "#     vudviz_im2[:, -1] = (vudviz_im2[:, 0] != -np.Inf)\n",
     "#     vudviz_im1[:, -1] = np.logical_and(vudviz_im1[:, -1], (vudviz_im1[:, 2] > 0))\n",
+    "    \n",
+    "    visible_either = ((uvdviz_im1[:, -1] == 1) | (uvdviz_im2[:, -1] == 1))\n",
+    "    uvdviz_im1 = uvdviz_im1[visible_either]\n",
+    "    uvdviz_im2 = uvdviz_im2[visible_either]\n",
+    "#         xyz1 = uvd_to_xyzrgb(uvd1, fp.K)[:, :3]\n",
+    "#         xyz2 = uvd_to_xyzrgb(uvd2, fp.K)[:, :3]     \n",
     "    \n",
     "    return uvdviz_im1, uvdviz_im2\n",
     "\n",
@@ -2071,8 +2071,12 @@
     "    def create_from(cls, oflow_pair: OpticalFlowPair):\n",
     "        import numpy as np\n",
     "        fp = oflow_pair\n",
-    "        xyz1 = fp.get_xyz1()\n",
-    "        xyz2 = fp.get_xyz2()\n",
+    "\n",
+    "        uvd1 = fp.uvdviz_im1[:, :3]\n",
+    "        uvd2 = fp.uvdviz_im2[:, :3]\n",
+    "#         visible_either = ((uvd1[:, -1] == 1) | (uvd2[:, -1] == 1))\n",
+    "        xyz1 = uvd_to_xyzrgb(uvd1, fp.K)[:, :3]\n",
+    "        xyz2 = uvd_to_xyzrgb(uvd2, fp.K)[:, :3]        \n",
     "        \n",
     "        fwd_nn = get_nearest_neighbors(xyz1, xyz2)\n",
     "        fwd_nn_dist = np.linalg.norm(fwd_nn - xyz1, axis=1)\n",
@@ -2113,9 +2117,9 @@
     "        \n",
     "        fwd_nn_xyz = self.fwd_nn_xyz\n",
     "        fp = self.opair\n",
-    "        uvd2 = fp.uvdviz_im2[fp.uvdviz_im2[:, -1] == 1, :3]\n",
+    "        uvd2 = fp.uvdviz_im2[:, :3]\n",
     "        xyzrgb2 = uvd_to_xyzrgb(uvd2, fp.K, imgs=[fp.get_img2()])\n",
-    "        fwd_nn_xyzrgb = np.ones((fwd_nn_xyz.shape[0] + xyzrgb2.shape[0], 3 + 3)) * 128.\n",
+    "        fwd_nn_xyzrgb = np.ones((fwd_nn_xyz.shape[0] + xyzrgb2.shape[0], 3 + 3)) * 110.\n",
     "        fwd_nn_xyzrgb[:fwd_nn_xyz.shape[0], :3] = fwd_nn_xyz[:, :3]\n",
     "        fwd_nn_xyzrgb[fwd_nn_xyz.shape[0]:, :6] = xyzrgb2[:, :6]\n",
     "        \n",
@@ -2156,7 +2160,7 @@
     "            \n",
     "            <tr>\n",
     "                <td style=\"text-align:left\">\n",
-    "                  Nearest Neighbor Cloud (Grey) vs Target Cloud (Colors))<br /> {fwd_nn_html}\n",
+    "                  Nearest Neighbor Cloud (Grey) vs Target Cloud (Colors)<br /> {fwd_nn_html}\n",
     "                </td>\n",
     "            </tr> \n",
     "            \n",
@@ -2183,10 +2187,9 @@
     "    \n",
     "if SHOW_DEMO_OUTPUT:\n",
     "    %matplotlib agg\n",
-    "    for fp in DEMO_FPS[3:]:\n",
+    "    for fp in DEMO_FPS:\n",
     "        sfstats = SFlowStats.create_from(fp)\n",
-    "        show_html(fp.to_html() + \"<br />\" + sfstats.to_html() + \"</br></br></br>\")\n",
-    "        break\n"
+    "        show_html(fp.to_html() + \"<br />\" + sfstats.to_html() + \"</br></br></br>\")\n"
    ]
   },
   {
