--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -2017,6 +2017,22 @@
     "#     dists = np.asarray(dists)\n",
     "#     return dists\n",
     "\n",
+    "def get_icp_results(xyz_src, xyz_target):\n",
+    "    import numpy as np\n",
+    "    import open3d as o3d\n",
+    "    pcds = o3d.geometry.PointCloud()\n",
+    "    pcds.points = o3d.utility.Vector3dVector(xyz_src)\n",
+    "    pcdt = o3d.geometry.PointCloud()\n",
+    "    pcdt.points = o3d.utility.Vector3dVector(xyz_target)\n",
+    "    \n",
+    "    threshold = 0.01\n",
+    "    trans_init = np.eye(4, 4)\n",
+    "    reg = o3d.pipelines.registration.registration_icp(\n",
+    "                    pcds, pcdt, threshold, trans_init,\n",
+    "                    o3d.pipelines.registration.TransformationEstimationPointToPoint(),\n",
+    "                    o3d.pipelines.registration.ICPConvergenceCriteria(max_iteration=100))\n",
+    "    return reg.fitness, reg.inlier_rmse\n",
+    "\n",
     "def get_nearest_neighbors(xyz_src, xyz_target):\n",
     "    # We need to use scipy KDTree because open3d doesn't provide an API \n",
     "    # for efficiently querying for more than one point\n",
@@ -2030,6 +2046,11 @@
     "    \"\"\"Stats on the scene flow of a `OpticalFlowPair` instance (that has scene flow data)\"\"\"\n",
     "\n",
     "    slots = (\n",
+    "        'sf_norm_hist',\n",
+    "           # Histogram [bin edges, bin counts] of scene flow vector L2 norms\n",
+    "        'sf_norm_var',\n",
+    "           # Variance of Scene Flow displacements\n",
+    "        \n",
     "        'fwd_nn_xyz',\n",
     "        'fwd_nn_dist_to_sf_dist',\n",
     "        \n",
@@ -2050,6 +2071,11 @@
     "        \n",
     "#         'chamfer_distance',\n",
     "#         'icp_chamfer_distance',\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        'icp_fitness',\n",
+    "        'icp_inlier_rmse',\n",
     "        \n",
     "        'opair',\n",
     "    )\n",
@@ -2076,7 +2102,7 @@
     "        uvd2 = fp.uvdviz_im2[:, :3]\n",
     "#         visible_either = ((uvd1[:, -1] == 1) | (uvd2[:, -1] == 1))\n",
     "        xyz1 = uvd_to_xyzrgb(uvd1, fp.K)[:, :3]\n",
-    "        xyz2 = uvd_to_xyzrgb(uvd2, fp.K)[:, :3]        \n",
+    "        xyz2 = uvd_to_xyzrgb(uvd2, fp.K)[:, :3]\n",
     "        \n",
     "        fwd_nn = get_nearest_neighbors(xyz1, xyz2)\n",
     "        fwd_nn_dist = np.linalg.norm(fwd_nn - xyz1, axis=1)\n",
@@ -2095,8 +2121,17 @@
     "        bin_counts, bin_edges = np.histogram(fwd_nn_end_point_error, bins=1000)\n",
     "        fwd_nnepe_hist = bin_edges, bin_counts\n",
     "        \n",
+    "        bin_counts, bin_edges = np.histogram(fwd_sf_dist, bins=1000)\n",
+    "        sf_norm_hist = bin_edges, bin_counts\n",
+    "        sf_norm_var = np.var(fwd_sf_dist)\n",
+    "        \n",
+    "        icp_fitness, icp_inlier_rmse = get_icp_results(xyz1, xyz2)\n",
+    "        \n",
     "        return SFlowStats(\n",
     "                 opair=oflow_pair,\n",
+    "                 sf_norm_hist=sf_norm_hist,\n",
+    "                 sf_norm_var=sf_norm_var,\n",
+    "\n",
     "                 fwd_nn_xyz=fwd_nn,\n",
     "                 \n",
     "                 fwd_nn_dist_to_sf_dist=fwd_nn_dist_to_sf_dist,\n",
@@ -2110,7 +2145,10 @@
     "                 bkd_nnepe_mean=np.mean(bkd_nn_end_point_error),\n",
     "                 bkd_nnepe_sum=np.sum(bkd_nn_end_point_error),\n",
     "            \n",
-    "                 fwd_nnepe_hist=fwd_nnepe_hist)\n",
+    "                 fwd_nnepe_hist=fwd_nnepe_hist,\n",
+    "            \n",
+    "                 icp_fitness=icp_fitness,\n",
+    "                 icp_inlier_rmse=icp_inlier_rmse)\n",
     "                 \n",
     "    def to_html(self):\n",
     "        import numpy as np\n",
@@ -2125,7 +2163,21 @@
     "        \n",
     "        fwd_nn_html = create_xyzrgb_3d_plot_html(fwd_nn_xyzrgb)\n",
     "        \n",
+    "        \n",
     "        import matplotlib.pyplot as plt\n",
+    "        fig = plt.figure()\n",
+    "        bin_edges, bin_counts = self.sf_norm_hist\n",
+    "        \n",
+    "        plt.bar(bin_edges[:-1], bin_counts)\n",
+    "        plt.xlim(left=0)\n",
+    "        plt.title(\"Histogram of Scene Flow Vector L2 Norms\")\n",
+    "        plt.xlabel('L2 Norm (meters)')\n",
+    "        plt.ylabel('Count')\n",
+    "\n",
+    "        sf_norm_hist_img = matplotlib_fig_to_img(fig)\n",
+    "        sf_norm_hist_html = img_to_data_uri(matplotlib_fig_to_img(sf_norm_hist_img))\n",
+    "                \n",
+    "        \n",
     "        fig = plt.figure()\n",
     "        bin_edges, bin_counts = self.fwd_nnepe_hist\n",
     "        \n",
@@ -2140,6 +2192,11 @@
     "        \n",
     "        html = \"\"\"\n",
     "            <table>\n",
+    "            <tr><td><img src=\"{sf_norm_hist}\" width=\"100%\" /></td></tr>\n",
+    "            <tr>\n",
+    "              <td style=\"text-align:left\"><b>Variance of Scene Flow Displacements:</b> {sf_norm_var}</td>\n",
+    "            </tr>\n",
+    "            \n",
     "            <tr><td style=\"text-align:left\"><b>Forwards Nearest Neighbor End Point Error</b></td></tr>\n",
     "            <tr>\n",
     "                <td style=\"text-align:left\">\n",
@@ -2172,8 +2229,19 @@
     "              </td>\n",
     "            <tr>\n",
     "            \n",
+    "            <tr><td style=\"text-align:left\"><b>ICP (point-to-point) results:</b></td></tr>\n",
+    "            <tr>\n",
+    "              <td style=\"text-align:left\">\n",
+    "                Fitness: {icp_fitness}<br/>\n",
+    "                Inlier RMSE: {icp_inlier_rmse}<br/>\n",
+    "              </td>\n",
+    "            <tr>\n",
+    "            \n",
     "            </table>\n",
     "        \"\"\".format(\n",
+    "                sf_norm_hist=sf_norm_hist_html,\n",
+    "                sf_norm_var=self.sf_norm_var,\n",
+    "\n",
     "                fwd_nn_dist_to_sf_dist=self.fwd_nn_dist_to_sf_dist,\n",
     "                fepe_hist=fepe_hist_html,\n",
     "                fwd_nnepe_mean=self.fwd_nnepe_mean, fwd_nnepe_sum=self.fwd_nnepe_sum,\n",
@@ -2182,7 +2250,10 @@
     "                fwd_nn_html=fwd_nn_html,\n",
     "                \n",
     "                bkd_nnepe_mean=self.bkd_nnepe_mean,\n",
-    "                bkd_nnepe_sum=self.bkd_nnepe_sum)\n",
+    "                bkd_nnepe_sum=self.bkd_nnepe_sum,\n",
+    "        \n",
+    "                icp_fitness=self.icp_fitness,\n",
+    "                icp_inlier_rmse=self.icp_inlier_rmse)\n",
     "        return html\n",
     "    \n",
     "if SHOW_DEMO_OUTPUT:\n",
