--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -1101,7 +1101,117 @@
     "    flow[invalid_idx, 1] = 0\n",
     "    return flow[:, :, :2]\n",
     "\n",
+    "def kittisf15_load_disp(disp_path):\n",
+    "    import imageio\n",
+    "    \n",
+    "    # From KITTI SF Devkit:\n",
+    "    # \"Disparity maps are saved as uint16 PNG images, which can be opened with\n",
+    "    # either MATLAB or libpng++. A 0 value indicates an invalid pixel (ie, no\n",
+    "    # ground truth exists, or the estimation algorithm didn't produce an estimate\n",
+    "    # for that pixel). Otherwise, the disparity for a pixel can be computed by\n",
+    "    # converting the uint16 value to float and dividing it by 256.0\"\n",
+    "\n",
+    "    img = imageio.imread(disp_path)\n",
+    "    disp = img.astype('float32') / 256.\n",
+    "    return disp\n",
+    "\n",
+    "def kittisf15_load_K_baseline(cam_to_cam_path):\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    K_line = None\n",
+    "    T_00_line = None\n",
+    "    T_01_line = None\n",
+    "    with open(cam_to_cam_path, 'r') as f:\n",
+    "        for l in f.readlines():\n",
+    "            if 'P_rect_02' in l:\n",
+    "                K_line = l\n",
+    "            if 'T_02' in l:\n",
+    "                T_00_line = l\n",
+    "            if 'T_03' in l:\n",
+    "                T_01_line = l\n",
+    "    \n",
+    "    assert K_line\n",
+    "    params = K_line.split('P_rect_02: ')[-1]\n",
+    "    params = [float(tok.strip()) for tok in params.split(' ') if tok]\n",
+    "    K = np.array(params).reshape([3, 4])\n",
+    "    K = K[:3, :3]\n",
+    "    \n",
+    "    assert T_00_line\n",
+    "    assert T_01_line\n",
+    "    params = T_00_line.split('T_02: ')[-1]\n",
+    "    params = [float(tok.strip()) for tok in params.split(' ') if tok]\n",
+    "    T_00 = np.array(params)\n",
+    "    params = T_01_line.split('T_03: ')[-1]\n",
+    "    params = [float(tok.strip()) for tok in params.split(' ') if tok]\n",
+    "    T_01 = np.array(params)\n",
+    "    baseline = np.linalg.norm(T_00 - T_01)\n",
+    "    \n",
+    "    return K, baseline\n",
+    "\n",
+    "def kittisf15_load_sflow(flow, K, baseline, disp0_path, disp1_path):\n",
+    "    fx = K[0, 0]\n",
+    "    \n",
+    "    disp0 = kittisf15_load_disp(disp0_path)\n",
+    "    disp0_valid = disp0[:, :] > 0\n",
+    "    d0 = fx * baseline / disp0\n",
+    "    d0[~disp0_valid] = 0\n",
+    "    \n",
+    "    disp1 = kittisf15_load_disp(disp1_path)\n",
+    "    disp1_valid = disp1[:, :] > 0\n",
+    "    d1 = fx * baseline / disp1\n",
+    "    d1[~disp1_valid] = 0\n",
+    "    \n",
+    "    h, w = d1.shape[:2]\n",
+    "    px_y = np.tile(np.arange(h)[:, np.newaxis], [1, w])\n",
+    "    px_x = np.tile(np.arange(w)[np.newaxis, :], [h, 1])\n",
+    "    pyx = np.concatenate([px_y[:,:,np.newaxis], px_x[:, :, np.newaxis]], axis=-1)\n",
+    "    pyx = pyx.astype(np.float32)\n",
+    "    \n",
+    "    vud1 = np.dstack([pyx, d0]).reshape([-1, 3])\n",
+    "    uvdviz_im1 = np.zeros((vud1.shape[0], 4))\n",
+    "    uvdviz_im1[:, :3] = vud1[:, (1, 0, 2)]\n",
+    "    uvdviz_im1[:, -1] = np.logical_and(\n",
+    "                            (flow > 0).reshape([-1, 2])[:, 0], # Flow is valid\n",
+    "                            (d0 > 0).reshape([-1]))            # Depth is valid\n",
+    "\n",
+    "    vu2 = (pyx + flow[:, :, (1, 0)]).reshape([-1, 2])\n",
+    "    d2_valid = (d1 > 0).reshape([-1])\n",
+    "    invalid = np.where(\n",
+    "            (np.rint(vu2[:, 0]) < 0) | (np.rint(vu2[:, 0]) >= h) |\n",
+    "            (np.rint(vu2[:, 1]) < 0) | (np.rint(vu2[:, 1]) >= w) |\n",
+    "            (flow[:, :, 0] == 0).reshape([-1]) |\n",
+    "            (~d2_valid))\n",
+    "    j2 = np.rint(vu2[:, 0]).astype(np.int64)\n",
+    "    i2 = np.rint(vu2[:, 1]).astype(np.int64)\n",
+    "    j2[invalid] = 0\n",
+    "    i2[invalid] = 0\n",
+    "    d2_col = d1[j2, i2]\n",
+    "    vud2 = np.hstack([vu2, d2_col[:, np.newaxis]])\n",
+    "    \n",
+    "    uvdviz_im2 = np.ones((vud1.shape[0], 4))\n",
+    "    uvdviz_im2[:, :3] = vud2[:, (1, 0, 2)]\n",
+    "    uvdviz_im2[invalid, -1] = 0\n",
+    "    \n",
+    "#     vudviz_im2[:, -1] = (vudviz_im2[:, 0] != -np.Inf)\n",
+    "#     vudviz_im1[:, -1] = np.logical_and(vudviz_im1[:, -1], (vudviz_im1[:, 2] > 0))\n",
+    "    \n",
+    "    visible_either = ((uvdviz_im1[:, -1] == 1) | (uvdviz_im2[:, -1] == 1))\n",
+    "    uvdviz_im1 = uvdviz_im1[visible_either]\n",
+    "    uvdviz_im2 = uvdviz_im2[visible_either]\n",
+    "#         xyz1 = uvd_to_xyzrgb(uvd1, fp.K)[:, :3]\n",
+    "#         xyz2 = uvd_to_xyzrgb(uvd2, fp.K)[:, :3]     \n",
+    "    \n",
+    "    return uvdviz_im1, uvdviz_im2\n",
+    "\n",
+    "\n",
     "def kittisf15_create_fp(uri):\n",
+    "    flow = kittisf15_load_flow(os.path.join(KITTI_SF15_DATA_ROOT, uri.extra['ksf15.flow_gt']))\n",
+    "    K, baseline = kittisf15_load_K_baseline(os.path.join(KITTI_SF15_DATA_ROOT, uri.extra['ksf15.K']))\n",
+    "    uvdviz_im1, uvdviz_im2 = kittisf15_load_sflow(\n",
+    "                                    flow, K, baseline,\n",
+    "                                    os.path.join(KITTI_SF15_DATA_ROOT, uri.extra['ksf15.disp0']),\n",
+    "                                    os.path.join(KITTI_SF15_DATA_ROOT, uri.extra['ksf15.disp1']))\n",
+    "    \n",
     "    return OpticalFlowPair(\n",
     "                uri=uri,\n",
     "                dataset=\"KITTI Scene Flow 2015\",\n",
@@ -1109,7 +1219,11 @@
     "                img1='file://' + os.path.join(KITTI_SF15_DATA_ROOT, uri.extra['ksf15.input']),\n",
     "                id2=uri.extra['ksf15.expected_out'],\n",
     "                img2='file://' + os.path.join(KITTI_SF15_DATA_ROOT, uri.extra['ksf15.expected_out']),\n",
-    "                flow=kittisf15_load_flow(os.path.join(KITTI_SF15_DATA_ROOT, uri.extra['ksf15.flow_gt'])))\n",
+    "                flow=flow,\n",
+    "        \n",
+    "                K=K,\n",
+    "                uvdviz_im1=uvdviz_im1,\n",
+    "                uvdviz_im2=uvdviz_im2)\n",
     "\n",
     "\n",
     "class KITTISF15Factory(FlowPairFactoryBase):\n",
@@ -1129,6 +1243,9 @@
     "                \"ksf15.input\": 'training/image_2/%s' % fname,\n",
     "                \"ksf15.expected_out\": 'training/image_2/%s' % fname.replace('_10', '_11'),\n",
     "                \"ksf15.flow_gt\": 'training/flow_occ/%s' % fname,\n",
+    "                \"ksf15.disp0\": 'training/disp_occ_0/%s' % fname,\n",
+    "                \"ksf15.disp1\": 'training/disp_occ_1/%s' % fname,\n",
+    "                \"ksf15.K\": 'training/calib_cam_to_cam/%s' % fname.replace('_10.png', '.txt'),\n",
     "            }\n",
     "            for fname in KITTI_SF15_ALL_FLOW_OCC\n",
     "        ]\n",
@@ -1175,26 +1292,41 @@
     "        'ksf15.input': 'training/image_2/000000_10.png',\n",
     "        'ksf15.expected_out': 'training/image_2/000000_11.png',\n",
     "        'ksf15.flow_gt': 'training/flow_occ/000000_10.png',\n",
+    "        'ksf15.disp0': 'training/disp_occ_0/000000_10.png',\n",
+    "        'ksf15.disp1': 'training/disp_occ_1/000000_10.png',\n",
+    "        'ksf15.K': 'training/calib_cam_to_cam/000000.txt',\n",
     "    }),\n",
     "    datum.URI(dataset=KITTISF15Factory.DATASET, extra={\n",
     "        'ksf15.input': 'training/image_2/000007_10.png',\n",
     "        'ksf15.expected_out': 'training/image_2/000007_11.png',\n",
     "        'ksf15.flow_gt': 'training/flow_occ/000007_10.png',\n",
+    "        'ksf15.disp0': 'training/disp_occ_0/000007_10.png',\n",
+    "        'ksf15.disp1': 'training/disp_occ_1/000007_10.png',\n",
+    "        'ksf15.K': 'training/calib_cam_to_cam/000007.txt',\n",
     "    }),\n",
     "    datum.URI(dataset=KITTISF15Factory.DATASET, extra={\n",
     "        'ksf15.input': 'training/image_2/000023_10.png',\n",
     "        'ksf15.expected_out': 'training/image_2/000023_11.png',\n",
     "        'ksf15.flow_gt': 'training/flow_occ/000023_10.png',\n",
+    "        'ksf15.disp0': 'training/disp_occ_0/000023_10.png',\n",
+    "        'ksf15.disp1': 'training/disp_occ_1/000023_10.png',\n",
+    "        'ksf15.K': 'training/calib_cam_to_cam/000023.txt',\n",
     "    }),\n",
     "    datum.URI(dataset=KITTISF15Factory.DATASET, extra={\n",
     "        'ksf15.input': 'training/image_2/000051_10.png',\n",
     "        'ksf15.expected_out': 'training/image_2/000051_11.png',\n",
     "        'ksf15.flow_gt': 'training/flow_occ/000051_10.png',\n",
+    "        'ksf15.disp0': 'training/disp_occ_0/000051_10.png',\n",
+    "        'ksf15.disp1': 'training/disp_occ_1/000051_10.png',\n",
+    "        'ksf15.K': 'training/calib_cam_to_cam/000051.txt',\n",
     "    }),\n",
     "    datum.URI(dataset=KITTISF15Factory.DATASET, extra={\n",
     "        'ksf15.input': 'training/image_2/000003_10.png',\n",
     "        'ksf15.expected_out': 'training/image_2/000003_11.png',\n",
     "        'ksf15.flow_gt': 'training/flow_occ/000003_10.png',\n",
+    "        'ksf15.disp0': 'training/disp_occ_0/000003_10.png',\n",
+    "        'ksf15.disp1': 'training/disp_occ_1/000003_10.png',\n",
+    "        'ksf15.K': 'training/calib_cam_to_cam/000003.txt',\n",
     "    }),\n",
     "]\n",
     "\n",
