--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -1153,12 +1153,12 @@
     "    \n",
     "    disp0 = kittisf15_load_disp(disp0_path)\n",
     "    disp0_valid = disp0[:, :] > 0\n",
-    "    d0 = fx * baseline / disp0\n",
+    "    d0 = fx * baseline / (disp0 + 1e-5)\n",
     "    d0[~disp0_valid] = 0\n",
     "    \n",
     "    disp1 = kittisf15_load_disp(disp1_path)\n",
     "    disp1_valid = disp1[:, :] > 0\n",
-    "    d1 = fx * baseline / disp1\n",
+    "    d1 = fx * baseline / (disp1 + 1e-5)\n",
     "    d1[~disp1_valid] = 0\n",
     "    \n",
     "    h, w = d1.shape[:2]\n",
@@ -1339,7 +1339,8 @@
     "    fps = fp_rdd.collect()\n",
     "    \n",
     "    for fp in fps:\n",
-    "        show_html(fp.to_html() + \"<br/><br/><br/>\")\n",
+    "#         show_html(fp.to_html() + \"<br/><br/><br/>\")\n",
+    "        print('fixme show html')\n",
     "        DEMO_FPS.append(fp)\n",
     "\n",
     "\n",
@@ -1859,7 +1860,8 @@
     "    DEMO_RECONS = []\n",
     "    for p in DEMO_FPS:\n",
     "        recon = FlowReconstructedImagePair.create_from(p)\n",
-    "        show_html(recon.to_html() + \"</br></br></br>\")\n",
+    "#         show_html(recon.to_html() + \"</br></br></br>\")\n",
+    "        print('fixme html')\n",
     "        DEMO_RECONS.append(recon)\n"
    ]
   },
@@ -2150,6 +2152,7 @@
     "#     return dists\n",
     "\n",
     "def get_icp_results(xyz_src, xyz_target):\n",
+    "    print('get_icp_results', xyz_src.min(axis=0), xyz_src.max(axis=0), xyz_target.min(axis=0) ,xyz_target.max(axis=0))\n",
     "    import numpy as np\n",
     "    import open3d as o3d\n",
     "    pcds = o3d.geometry.PointCloud()\n",
@@ -2162,14 +2165,18 @@
     "    reg = o3d.pipelines.registration.registration_icp(\n",
     "                    pcds, pcdt, threshold, trans_init,\n",
     "                    o3d.pipelines.registration.TransformationEstimationPointToPoint(),\n",
-    "                    o3d.pipelines.registration.ICPConvergenceCriteria(max_iteration=100))\n",
+    "                    o3d.pipelines.registration.ICPConvergenceCriteria(max_iteration=10))\n",
     "    return reg.fitness, reg.inlier_rmse\n",
     "\n",
     "def get_nearest_neighbors(xyz_src, xyz_target):\n",
+    "    print('get_nearest_neighbors', xyz_src.min(axis=0), xyz_src.max(axis=0), xyz_target.min(axis=0) ,xyz_target.max(axis=0))\n",
     "    # We need to use scipy KDTree because open3d doesn't provide an API \n",
     "    # for efficiently querying for more than one point\n",
     "    from scipy.spatial import KDTree\n",
+    "    print('fixme try open3d...')\n",
+    "    print('tree size', xyz_target.shape[0])\n",
     "    tree = KDTree(xyz_target)\n",
+    "    print('query size', xyz_src.shape[0])\n",
     "    dists, idx = tree.query(xyz_src)\n",
     "    return xyz_target[idx]\n",
     "\n",
@@ -2184,6 +2191,8 @@
     "           # Variance of Scene Flow displacements\n",
     "        \n",
     "        'fwd_nn_xyz',\n",
+    "        'fwd_nn_hist',\n",
+    "\n",
     "        'fwd_nn_dist_to_sf_dist',\n",
     "        \n",
     "        'fwd_nnepe_mean',\n",
@@ -2232,31 +2241,42 @@
     "\n",
     "        uvd1 = fp.uvdviz_im1[:, :3]\n",
     "        uvd2 = fp.uvdviz_im2[:, :3]\n",
+    "        print('uvd1 shape', uvd1.shape[0])\n",
+    "        print('uvd2 shape', uvd2.shape[0])\n",
     "#         visible_either = ((uvd1[:, -1] == 1) | (uvd2[:, -1] == 1))\n",
     "        xyz1 = uvd_to_xyzrgb(uvd1, fp.K)[:, :3]\n",
     "        xyz2 = uvd_to_xyzrgb(uvd2, fp.K)[:, :3]\n",
-    "        \n",
+    "        print('fwd nn stuff start')\n",
     "        fwd_nn = get_nearest_neighbors(xyz1, xyz2)\n",
     "        fwd_nn_dist = np.linalg.norm(fwd_nn - xyz1, axis=1)\n",
     "        fwd_sf_dist = np.linalg.norm(xyz2 - xyz1, axis=1)\n",
     "        fwd_nn_dist_to_sf_dist = fwd_nn_dist.sum() / fwd_sf_dist.sum()\n",
     "        fwd_nn_end_point_error = np.linalg.norm(fwd_nn - xyz2, axis=1)\n",
     "        \n",
+    "        print('bkd nn stuff start')\n",
     "        bkd_nn = get_nearest_neighbors(xyz2, xyz1)\n",
     "        bkd_nn_end_point_error = np.linalg.norm(bkd_nn - xyz1, axis=1)\n",
     "        \n",
+    "        print('fwd_nnepes nn stuff start')\n",
     "        fwd_nnepes = sorted(fwd_nn_end_point_error.tolist())\n",
     "        def percentile(slst, p):\n",
     "            idx = int(p * len(slst))\n",
     "            return slst[idx]\n",
     "        \n",
+    "        print('fwd_nn_end_point_error hist start')\n",
     "        bin_counts, bin_edges = np.histogram(fwd_nn_end_point_error, bins=1000)\n",
     "        fwd_nnepe_hist = bin_edges, bin_counts\n",
     "        \n",
+    "        print('fwd_nn_dist hist start')\n",
+    "        bin_counts, bin_edges = np.histogram(fwd_nn_dist, bins=1000)\n",
+    "        fwd_nn_hist = bin_edges, bin_counts\n",
+    "        \n",
+    "        print('fwd_sf_dist hist start')\n",
     "        bin_counts, bin_edges = np.histogram(fwd_sf_dist, bins=1000)\n",
     "        sf_norm_hist = bin_edges, bin_counts\n",
     "        sf_norm_var = np.var(fwd_sf_dist)\n",
     "        \n",
+    "        print('icp start')\n",
     "        icp_fitness, icp_inlier_rmse = get_icp_results(xyz1, xyz2)\n",
     "        \n",
     "        return SFlowStats(\n",
@@ -2265,6 +2285,7 @@
     "                 sf_norm_var=sf_norm_var,\n",
     "\n",
     "                 fwd_nn_xyz=fwd_nn,\n",
+    "                 fwd_nn_hist=fwd_nn_hist,\n",
     "                 \n",
     "                 fwd_nn_dist_to_sf_dist=fwd_nn_dist_to_sf_dist,\n",
     "                 \n",
@@ -2311,6 +2332,19 @@
     "                \n",
     "        \n",
     "        fig = plt.figure()\n",
+    "        bin_edges, bin_counts = self.fwd_nn_hist\n",
+    "        \n",
+    "        plt.bar(bin_edges[:-1], bin_counts)\n",
+    "        plt.xlim(left=0)\n",
+    "        plt.title(\"Histogram of Nearest-Neighbor Distances (L2 Norms)\")\n",
+    "        plt.xlabel('Distance (meters)')\n",
+    "        plt.ylabel('Count')\n",
+    "\n",
+    "        fwd_nn_hist_img = matplotlib_fig_to_img(fig)\n",
+    "        fwd_nn_hist_html = img_to_data_uri(matplotlib_fig_to_img(fwd_nn_hist_img))\n",
+    "        \n",
+    "        \n",
+    "        fig = plt.figure()\n",
     "        bin_edges, bin_counts = self.fwd_nnepe_hist\n",
     "        \n",
     "        plt.bar(bin_edges[:-1], bin_counts)\n",
@@ -2325,6 +2359,7 @@
     "        html = \"\"\"\n",
     "            <table>\n",
     "            <tr><td><img src=\"{sf_norm_hist}\" width=\"100%\" /></td></tr>\n",
+    "            \n",
     "            <tr>\n",
     "              <td style=\"text-align:left\"><b>Variance of Scene Flow Displacements:</b> {sf_norm_var}</td>\n",
     "            </tr>\n",
@@ -2335,6 +2370,10 @@
     "                Ratio of total nearest-neighbor distance to total scene flow displacement:\n",
     "                  {fwd_nn_dist_to_sf_dist}\n",
     "                </td>\n",
+    "            </tr>\n",
+    "            <tr><td>\n",
+    "                <img src=\"{fwd_nn_hist_html}\" width=\"100%\" /><br />\n",
+    "                (Compare with Scene Flow Displacement histogram above)</td>\n",
     "            </tr>\n",
     "            <tr><td><img src=\"{fepe_hist}\" width=\"100%\" /></td></tr>\n",
     "            <tr>\n",
@@ -2374,6 +2413,7 @@
     "                sf_norm_hist=sf_norm_hist_html,\n",
     "                sf_norm_var=self.sf_norm_var,\n",
     "\n",
+    "                fwd_nn_hist_html=fwd_nn_hist_html,\n",
     "                fwd_nn_dist_to_sf_dist=self.fwd_nn_dist_to_sf_dist,\n",
     "                fepe_hist=fepe_hist_html,\n",
     "                fwd_nnepe_mean=self.fwd_nnepe_mean, fwd_nnepe_sum=self.fwd_nnepe_sum,\n",
