--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -1859,9 +1859,10 @@
     "if SHOW_DEMO_OUTPUT:\n",
     "    DEMO_RECONS = []\n",
     "    for p in DEMO_FPS:\n",
+    "        print('fixme html')\n",
+    "        continue\n",
     "        recon = FlowReconstructedImagePair.create_from(p)\n",
     "#         show_html(recon.to_html() + \"</br></br></br>\")\n",
-    "        print('fixme html')\n",
     "        DEMO_RECONS.append(recon)\n"
    ]
   },
@@ -2165,20 +2166,39 @@
     "    reg = o3d.pipelines.registration.registration_icp(\n",
     "                    pcds, pcdt, threshold, trans_init,\n",
     "                    o3d.pipelines.registration.TransformationEstimationPointToPoint(),\n",
-    "                    o3d.pipelines.registration.ICPConvergenceCriteria(max_iteration=10))\n",
+    "                    o3d.pipelines.registration.ICPConvergenceCriteria(max_iteration=100))\n",
     "    return reg.fitness, reg.inlier_rmse\n",
     "\n",
     "def get_nearest_neighbors(xyz_src, xyz_target):\n",
     "    print('get_nearest_neighbors', xyz_src.min(axis=0), xyz_src.max(axis=0), xyz_target.min(axis=0) ,xyz_target.max(axis=0))\n",
     "    # We need to use scipy KDTree because open3d doesn't provide an API \n",
     "    # for efficiently querying for more than one point\n",
-    "    from scipy.spatial import KDTree\n",
-    "    print('fixme try open3d...')\n",
-    "    print('tree size', xyz_target.shape[0])\n",
-    "    tree = KDTree(xyz_target)\n",
-    "    print('query size', xyz_src.shape[0])\n",
-    "    dists, idx = tree.query(xyz_src)\n",
-    "    return xyz_target[idx]\n",
+    "    \n",
+    "    import open3d as o3d\n",
+    "    pcdt = o3d.geometry.PointCloud()\n",
+    "    pcdt.points = o3d.utility.Vector3dVector(xyz_target)\n",
+    "    pcd_tree = o3d.geometry.KDTreeFlann(pcdt)\n",
+    "    \n",
+    "    pcds = o3d.geometry.PointCloud()\n",
+    "    pcds.points = o3d.utility.Vector3dVector(xyz_src)\n",
+    "    \n",
+    "    found = np.zeros(xyz_src.shape[0], dtype=np.int64)\n",
+    "    print(xyz_src.shape[0])\n",
+    "    for i in range(xyz_src.shape[0]):\n",
+    "        k, idx, dist = pcd_tree.search_hybrid_vector_3d(pcds.points[i], float('inf'), 1)\n",
+    "        found[i] = idx[0]\n",
+    "        if i % 10000 == 0:\n",
+    "            print(i)\n",
+    "    print('done get_nearest_neighbors')\n",
+    "    return xyz_target[found]\n",
+    "    \n",
+    "#     from scipy.spatial import KDTree\n",
+    "#     print('fixme try open3d...')\n",
+    "#     print('tree size', xyz_target.shape[0])\n",
+    "#     tree = KDTree(xyz_target)\n",
+    "#     print('query size', xyz_src.shape[0])\n",
+    "#     dists, idx = tree.query(xyz_src)\n",
+    "#     return xyz_target[idx]\n",
     "\n",
     "\n",
     "class SFlowStats(object):\n",
@@ -2248,6 +2268,7 @@
     "        xyz2 = uvd_to_xyzrgb(uvd2, fp.K)[:, :3]\n",
     "        print('fwd nn stuff start')\n",
     "        fwd_nn = get_nearest_neighbors(xyz1, xyz2)\n",
+    "        print('got fwd nn', fwd_nn.shape)\n",
     "        fwd_nn_dist = np.linalg.norm(fwd_nn - xyz1, axis=1)\n",
     "        fwd_sf_dist = np.linalg.norm(xyz2 - xyz1, axis=1)\n",
     "        fwd_nn_dist_to_sf_dist = fwd_nn_dist.sum() / fwd_sf_dist.sum()\n",
