--- a/notebooks/ios_lidar_explory.ipynb
+++ b/notebooks/ios_lidar_explory.ipynb
@@ -2371,6 +2371,209 @@
       "238\n",
       "yielding 10\n",
       "239\n",
+      "start batch\n",
+      "batch done 58.66905236244202\n",
+      "yielding 10\n",
+      "240\n",
+      "yielding 10\n",
+      "241\n",
+      "yielding 10\n",
+      "242\n",
+      "yielding 10\n",
+      "243\n",
+      "yielding 10\n",
+      "244\n",
+      "yielding 10\n",
+      "245\n",
+      "yielding 10\n",
+      "246\n",
+      "yielding 10\n",
+      "247\n",
+      "yielding 10\n",
+      "248\n",
+      "yielding 10\n",
+      "249\n",
+      "start batch\n",
+      "batch done 60.20902061462402\n",
+      "yielding 10\n",
+      "250\n",
+      "yielding 10\n",
+      "251\n",
+      "yielding 10\n",
+      "252\n",
+      "yielding 10\n",
+      "253\n",
+      "yielding 10\n",
+      "254\n",
+      "done /outer_root/media/red14000/Pictures_and_Docs/lidarphone_lidar_scans/2021_06_12_14_03_43pytorch_rgbd_debug.mp4\n",
+      "/outer_root/media/red14000/Pictures_and_Docs/lidarphone_lidar_scans/2021_06_12_14_03_43.mp4\n",
+      "0\n",
+      "done /outer_root/media/red14000/Pictures_and_Docs/lidarphone_lidar_scans/2021_06_12_14_03_43.mp4pytorch_rgbd_debug.mp4\n",
+      "/outer_root/media/red14000/Pictures_and_Docs/lidarphone_lidar_scans/2021_06_12_14_18_46\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "160\n",
+      "verts torch.Size([494355, 3])\n",
+      "faces torch.Size([849403, 3])\n",
+      "mesh <pytorch3d.structures.meshes.Meshes object at 0x7f8ae11a16a0>\n",
+      "start batch\n",
+      "batch done 77.76547455787659\n",
+      "yielding 10\n",
+      "0\n",
+      "yielding 10\n",
+      "1\n",
+      "yielding 10\n",
+      "2\n",
+      "yielding 10\n",
+      "3\n",
+      "yielding 10\n",
+      "4\n",
+      "yielding 10\n",
+      "5\n",
+      "yielding 10\n",
+      "6\n",
+      "yielding 10\n",
+      "7\n",
+      "yielding 10\n",
+      "8\n",
+      "yielding 10\n",
+      "9\n",
+      "start batch\n",
+      "batch done 76.28297543525696\n",
+      "yielding 10\n",
+      "10\n",
+      "yielding 10\n",
+      "11\n",
+      "yielding 10\n",
+      "12\n",
+      "yielding 10\n",
+      "13\n",
+      "yielding 10\n",
+      "14\n",
+      "yielding 10\n",
+      "15\n",
+      "yielding 10\n",
+      "16\n",
+      "yielding 10\n",
+      "17\n",
+      "yielding 10\n",
+      "18\n",
+      "yielding 10\n",
+      "19\n",
+      "start batch\n",
+      "batch done 77.92781257629395\n",
+      "yielding 10\n",
+      "20\n",
+      "yielding 10\n",
+      "21\n",
+      "yielding 10\n",
+      "22\n",
+      "yielding 10\n",
+      "23\n",
+      "yielding 10\n",
+      "24\n",
+      "yielding 10\n",
+      "25\n",
+      "yielding 10\n",
+      "26\n",
+      "yielding 10\n",
+      "27\n",
+      "yielding 10\n",
+      "28\n",
+      "yielding 10\n",
+      "29\n",
+      "start batch\n",
+      "batch done 76.22453212738037\n",
+      "yielding 10\n",
+      "30\n",
+      "yielding 10\n",
+      "31\n",
+      "yielding 10\n",
+      "32\n",
+      "yielding 10\n",
+      "33\n",
+      "yielding 10\n",
+      "34\n",
+      "yielding 10\n",
+      "35\n",
+      "yielding 10\n",
+      "36\n",
+      "yielding 10\n",
+      "37\n",
+      "yielding 10\n",
+      "38\n",
+      "yielding 10\n",
+      "39\n",
+      "start batch\n",
+      "batch done 76.08658266067505\n",
+      "yielding 10\n",
+      "40\n",
+      "yielding 10\n",
+      "41\n",
+      "yielding 10\n",
+      "42\n",
+      "yielding 10\n",
+      "43\n",
+      "yielding 10\n",
+      "44\n",
+      "yielding 10\n",
+      "45\n",
+      "yielding 10\n",
+      "46\n",
+      "yielding 10\n",
+      "47\n",
+      "yielding 10\n",
+      "48\n",
+      "yielding 10\n",
+      "49\n",
+      "start batch\n",
+      "batch done 75.78864288330078\n",
+      "yielding 10\n",
+      "50\n",
+      "yielding 10\n",
+      "51\n",
+      "yielding 10\n",
+      "52\n",
+      "yielding 10\n",
+      "53\n",
+      "yielding 10\n",
+      "54\n",
+      "yielding 10\n",
+      "55\n",
+      "yielding 10\n",
+      "56\n",
+      "yielding 10\n",
+      "57\n",
+      "yielding 10\n",
+      "58\n",
+      "yielding 10\n",
+      "59\n",
+      "start batch\n",
+      "batch done 75.90212106704712\n",
+      "yielding 10\n",
+      "60\n",
+      "yielding 10\n",
+      "61\n",
+      "yielding 10\n",
+      "62\n",
+      "yielding 10\n",
+      "63\n",
+      "yielding 10\n",
+      "64\n",
+      "yielding 10\n",
+      "65\n",
+      "yielding 10\n",
+      "66\n",
+      "yielding 10\n",
+      "67\n",
+      "yielding 10\n",
+      "68\n",
+      "yielding 10\n",
+      "69\n",
       "start batch\n"
      ]
     }
